--- a/static/index.html
+++ b/static/index.html
@@ -182,9 +182,9 @@
             </transition>
             <div class="col-12 text-center">
               <p class="text-muted m-0">
-                &copy; 2019
+                &copy; 2023
                 -
-                <a href="https://www.facebook.com/em.sifa" class="text-info">Muhammad Syifa</a>
+                <a href="https://www.facebook.com/bagaswihant" class="text-info">Bagas Wihant</a>
                 <span class="text-fade-50">|</span>
                 <span>Powered by <a href="https://pages.github.com/" class="text-info">GitHub Page</a></span>
               </span>
@@ -193,9 +193,9 @@
           <div class="row d-none d-sm-none d-md-flex">
             <div class="col-md-6">
               <p class="text-muted m-0">
-                &copy; 2019
+                &copy; 2023
                 -
-                <a href="https://www.facebook.com/em.sifa" class="text-info">Muhammad Syifa</a>
+                <a href="https://www.facebook.com/bagaswihant" class="text-info">Bagas Wihant</a>
                 <span class="text-fade-50">|</span>
                 <span>Powered by <a href="https://pages.github.com/" class="text-info">GitHub Page</a></span>
               </p>
